fix: align project content inside boxes

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -36,7 +36,7 @@
   transition: transform 108ms cubic-bezier(.17,.67,.83,.67);
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
 
   img {
 	margin-right: $space;
